--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,9 @@
     "import os\n",
     "\n",
     "# Import API key\n",
-    "from api_keys import g_key\n"
+    "from api_keys import g_key\n",
+    "\n",
+    "pd.set_option('mode.chained_assignment', None)"
    ]
   },
   {
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,13 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "106764a8c96b4045a3de10fcc5cda6cb",
+       "model_id": "b7aa34899edd4dce8825baca479ebf07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +99,7 @@
     "fig = gmaps.figure(layout=figure_layout)\n",
     "heatmap_layer = gmaps.heatmap_layer(\n",
     "    weather_df[['Lat', 'Lng']], weights=weather_df['Humidity'],\n",
-    "    max_intensity=50, point_radius=5.0\n",
+    "    max_intensity=100, point_radius=5.0\n",
     ")\n",
     "fig.add_layer(heatmap_layer)\n",
     "fig"
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,136 +154,121 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>46</td>\n",
-       "      <td>51</td>\n",
-       "      <td>abu dhabi</td>\n",
+       "      <td>246</td>\n",
+       "      <td>274</td>\n",
+       "      <td>pokhara</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>AE</td>\n",
-       "      <td>1.584493e+09</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>24.47</td>\n",
-       "      <td>54.37</td>\n",
-       "      <td>75.00</td>\n",
-       "      <td>3.36</td>\n",
+       "      <td>NP</td>\n",
+       "      <td>1.584503e+09</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>28.23</td>\n",
+       "      <td>83.98</td>\n",
+       "      <td>71.47</td>\n",
+       "      <td>0.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>78</td>\n",
-       "      <td>86</td>\n",
-       "      <td>airai</td>\n",
+       "      <td>248</td>\n",
+       "      <td>276</td>\n",
+       "      <td>batemans bay</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>TL</td>\n",
-       "      <td>1.584493e+09</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>-8.93</td>\n",
-       "      <td>125.41</td>\n",
-       "      <td>72.90</td>\n",
-       "      <td>4.52</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1.584503e+09</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>-35.72</td>\n",
+       "      <td>150.18</td>\n",
+       "      <td>75.99</td>\n",
+       "      <td>1.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>137</td>\n",
-       "      <td>149</td>\n",
-       "      <td>antalaha</td>\n",
+       "      <td>267</td>\n",
+       "      <td>299</td>\n",
+       "      <td>etah</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>MG</td>\n",
-       "      <td>1.584493e+09</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>-14.90</td>\n",
-       "      <td>50.28</td>\n",
-       "      <td>78.30</td>\n",
-       "      <td>4.94</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>1.584503e+09</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>27.63</td>\n",
+       "      <td>78.67</td>\n",
+       "      <td>71.13</td>\n",
+       "      <td>5.97</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>168</td>\n",
-       "      <td>181</td>\n",
-       "      <td>emilio carranza</td>\n",
+       "      <td>307</td>\n",
+       "      <td>340</td>\n",
+       "      <td>baikunthpur</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>1.584493e+09</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>19.97</td>\n",
-       "      <td>-96.61</td>\n",
-       "      <td>76.39</td>\n",
-       "      <td>9.98</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>1.584503e+09</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>23.25</td>\n",
+       "      <td>82.55</td>\n",
+       "      <td>74.01</td>\n",
+       "      <td>0.85</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>257</td>\n",
-       "      <td>279</td>\n",
+       "      <td>399</td>\n",
+       "      <td>439</td>\n",
+       "      <td>babai</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>1.584503e+09</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>22.70</td>\n",
+       "      <td>77.93</td>\n",
+       "      <td>79.72</td>\n",
+       "      <td>1.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>423</td>\n",
+       "      <td>466</td>\n",
+       "      <td>bilma</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NE</td>\n",
+       "      <td>1.584503e+09</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>18.69</td>\n",
+       "      <td>12.92</td>\n",
+       "      <td>70.11</td>\n",
+       "      <td>8.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>427</td>\n",
+       "      <td>470</td>\n",
        "      <td>jati</td>\n",
        "      <td>0.0</td>\n",
        "      <td>PK</td>\n",
-       "      <td>1.584493e+09</td>\n",
-       "      <td>24.0</td>\n",
+       "      <td>1.584503e+09</td>\n",
+       "      <td>18.0</td>\n",
        "      <td>24.35</td>\n",
        "      <td>68.27</td>\n",
-       "      <td>72.03</td>\n",
-       "      <td>7.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>271</td>\n",
-       "      <td>294</td>\n",
-       "      <td>morondava</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>MG</td>\n",
-       "      <td>1.584493e+09</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>-20.28</td>\n",
-       "      <td>44.28</td>\n",
-       "      <td>71.76</td>\n",
-       "      <td>3.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>442</td>\n",
-       "      <td>482</td>\n",
-       "      <td>dwarka</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>1.584493e+09</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>22.24</td>\n",
-       "      <td>68.97</td>\n",
-       "      <td>78.19</td>\n",
-       "      <td>8.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>506</td>\n",
-       "      <td>554</td>\n",
-       "      <td>aloleng</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>1.584493e+09</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>16.13</td>\n",
-       "      <td>119.78</td>\n",
-       "      <td>79.27</td>\n",
-       "      <td>9.57</td>\n",
+       "      <td>79.66</td>\n",
+       "      <td>5.97</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Unnamed: 0             City  Cloudiness Country          Date  Humidity  \\\n",
-       "46           51        abu dhabi         0.0      AE  1.584493e+09      64.0   \n",
-       "78           86            airai         0.0      TL  1.584493e+09      67.0   \n",
-       "137         149         antalaha         0.0      MG  1.584493e+09      84.0   \n",
-       "168         181  emilio carranza         0.0      MX  1.584493e+09      77.0   \n",
-       "257         279             jati         0.0      PK  1.584493e+09      24.0   \n",
-       "271         294        morondava         0.0      MG  1.584493e+09      93.0   \n",
-       "442         482           dwarka         0.0      IN  1.584493e+09      61.0   \n",
-       "506         554          aloleng         0.0      PH  1.584493e+09      60.0   \n",
+       "     Unnamed: 0          City  Cloudiness Country          Date  Humidity  \\\n",
+       "246         274       pokhara         0.0      NP  1.584503e+09      41.0   \n",
+       "248         276  batemans bay         0.0      AU  1.584503e+09      39.0   \n",
+       "267         299          etah         0.0      IN  1.584503e+09      46.0   \n",
+       "307         340   baikunthpur         0.0      IN  1.584503e+09      35.0   \n",
+       "399         439         babai         0.0      IN  1.584503e+09      22.0   \n",
+       "423         466         bilma         0.0      NE  1.584503e+09      10.0   \n",
+       "427         470          jati         0.0      PK  1.584503e+09      18.0   \n",
        "\n",
        "       Lat     Lng  Max Temp  Wind Speed  \n",
-       "46   24.47   54.37     75.00        3.36  \n",
-       "78   -8.93  125.41     72.90        4.52  \n",
-       "137 -14.90   50.28     78.30        4.94  \n",
-       "168  19.97  -96.61     76.39        9.98  \n",
-       "257  24.35   68.27     72.03        7.11  \n",
-       "271 -20.28   44.28     71.76        3.40  \n",
-       "442  22.24   68.97     78.19        8.63  \n",
-       "506  16.13  119.78     79.27        9.57  "
+       "246  28.23   83.98     71.47        0.83  \n",
+       "248 -35.72  150.18     75.99        1.99  \n",
+       "267  27.63   78.67     71.13        5.97  \n",
+       "307  23.25   82.55     74.01        0.85  \n",
+       "399  22.70   77.93     79.72        1.03  \n",
+       "423  18.69   12.92     70.11        8.79  \n",
+       "427  24.35   68.27     79.66        5.97  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +277,8 @@
     "ideal_weather_df = weather_df[(weather_df['Max Temp'] >= 70) & \n",
     "                              (weather_df['Max Temp'] <= 80) & \n",
     "                              (weather_df['Wind Speed'] <= 10) &\n",
-    "                              (weather_df['Cloudiness'] == 0)]\n",
+    "                              (weather_df['Cloudiness'] == 0) &\n",
+    "                              (weather_df['Humidity'] <= 50)]\n",
     "ideal_weather_df"
    ]
   },
@@ -309,22 +297,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\George\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hotel_df = ideal_weather_df\n",
     "hotel_df['Hotel Name'] = \"\""
@@ -332,36 +307,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrieving Results for Index 46: 24.47, 54.37.\n",
-      "Closest hotel in 24.47, 54.37 is Marriott Executive Apartments Downtown Abu Dhabi.\n",
+      "Retrieving Results for Index 246: 28.23, 83.98.\n",
+      "Closest hotel in 28.23, 83.98 is Thakali bhancha and lodge.\n",
       "------------\n",
-      "Retrieving Results for Index 78: -8.93, 125.41.\n",
-      "Closest hotel in -8.93, 125.41 is Juvinal Martin.\n",
+      "Retrieving Results for Index 248: -35.72, 150.18.\n",
+      "Closest hotel in -35.72, 150.18 is Shady Willows Caravan Park.\n",
       "------------\n",
-      "Retrieving Results for Index 137: -14.9, 50.28.\n",
-      "Closest hotel in -14.9, 50.28 is Hotel Vitasoa.\n",
+      "Retrieving Results for Index 267: 27.63, 78.67.\n",
+      "Closest hotel in 27.63, 78.67 is Bhole BABA mandir.\n",
       "------------\n",
-      "Retrieving Results for Index 168: 19.97, -96.61.\n",
-      "Closest hotel in 19.97, -96.61 is hotel delicias.\n",
+      "Retrieving Results for Index 307: 23.25, 82.55.\n",
+      "Closest hotel in 23.25, 82.55 is Vivek Jaiswal's Home.\n",
       "------------\n",
-      "Retrieving Results for Index 257: 24.35, 68.27.\n",
+      "Retrieving Results for Index 399: 22.7, 77.93.\n",
+      "Closest hotel in 22.7, 77.93 is Neelesh Meena.\n",
+      "------------\n",
+      "Retrieving Results for Index 423: 18.69, 12.92.\n",
+      "Closest hotel in 18.69, 12.92 is Expeditions Ténére voyages.\n",
+      "------------\n",
+      "Retrieving Results for Index 427: 24.35, 68.27.\n",
       "Closest hotel in 24.35, 68.27 is Muhammad Khuzaima Traders.\n",
-      "------------\n",
-      "Retrieving Results for Index 271: -20.28, 44.28.\n",
-      "Closest hotel in -20.28, 44.28 is eden rock hotel.\n",
-      "------------\n",
-      "Retrieving Results for Index 442: 22.24, 68.97.\n",
-      "Closest hotel in 22.24, 68.97 is Hotel Rajmandir.\n",
-      "------------\n",
-      "Retrieving Results for Index 506: 16.13, 119.78.\n",
-      "Closest hotel in 16.13, 119.78 is Agno Umbrella Rocks.\n",
       "------------\n"
      ]
     }
@@ -402,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,13 +396,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "259740c14328460c9e8d307c7056bdea",
+       "model_id": "b7aa34899edd4dce8825baca479ebf07",
        "version_major": 2,
        "version_minor": 0
       },
